// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScatterPlot > with Y axis min/max configuration > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with Y axis min/max configuration > should create expected props for core chart 1`] = `
{
  "config": {
    "xaxis": {
      "max": "15000000",
      "min": "5000000",
    },
    "yaxis": {
      "max": "0.55",
      "min": "0.5",
    },
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with assign color to measures > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with assign color to measures > should create expected props for core chart 1`] = `
{
  "config": {
    "colorMapping": [
      {
        "color": {
          "type": "rgb",
          "value": {
            "b": 0,
            "g": 0,
            "r": 0,
          },
        },
        "predicate": [Function],
      },
    ],
    "colorPalette": [
      {
        "fill": {
          "b": 73,
          "g": 49,
          "r": 195,
        },
        "guid": "01",
      },
      {
        "fill": {
          "b": 86,
          "g": 194,
          "r": 168,
        },
        "guid": "02",
      },
      {
        "fill": {
          "b": 177,
          "g": 217,
          "r": 243,
        },
        "guid": "03",
      },
      {
        "fill": {
          "b": 121,
          "g": 153,
          "r": 194,
        },
        "guid": "04",
      },
      {
        "fill": {
          "b": 34,
          "g": 37,
          "r": 162,
        },
        "guid": "05",
      },
    ],
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with axis name configuration - high > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with axis name configuration - high > should create expected props for core chart 1`] = `
{
  "config": {
    "secondary_xaxis": {
      "name": {
        "position": "high",
        "visible": true,
      },
    },
    "secondary_yaxis": {
      "name": {
        "position": "high",
        "visible": true,
      },
    },
    "xaxis": {
      "name": {
        "position": "high",
        "visible": true,
      },
    },
    "yaxis": {
      "name": {
        "position": "high",
        "visible": true,
      },
    },
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with axis name configuration - invisible > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with axis name configuration - invisible > should create expected props for core chart 1`] = `
{
  "config": {
    "secondary_xaxis": {
      "name": {
        "position": "middle",
        "visible": false,
      },
    },
    "secondary_yaxis": {
      "name": {
        "position": "middle",
        "visible": false,
      },
    },
    "xaxis": {
      "name": {
        "position": "middle",
        "visible": false,
      },
    },
    "yaxis": {
      "name": {
        "position": "middle",
        "visible": false,
      },
    },
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with axis name configuration - low > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with axis name configuration - low > should create expected props for core chart 1`] = `
{
  "config": {
    "secondary_xaxis": {
      "name": {
        "position": "low",
        "visible": true,
      },
    },
    "secondary_yaxis": {
      "name": {
        "position": "low",
        "visible": true,
      },
    },
    "xaxis": {
      "name": {
        "position": "low",
        "visible": true,
      },
    },
    "yaxis": {
      "name": {
        "position": "low",
        "visible": true,
      },
    },
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with axis name configuration - middle > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with axis name configuration - middle > should create expected props for core chart 1`] = `
{
  "config": {
    "secondary_xaxis": {
      "name": {
        "position": "middle",
        "visible": true,
      },
    },
    "secondary_yaxis": {
      "name": {
        "position": "middle",
        "visible": true,
      },
    },
    "xaxis": {
      "name": {
        "position": "middle",
        "visible": true,
      },
    },
    "yaxis": {
      "name": {
        "position": "middle",
        "visible": true,
      },
    },
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with coloring - custom colors > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring - custom colors > should create expected props for core chart 1`] = `
{
  "config": {
    "colors": [
      "rgb(33, 41, 195)",
      "rgb(18, 194, 25)",
      "rgb(243, 56, 47)",
      "rgb(240, 239, 8)",
      "rgb(131, 131, 131)",
    ],
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with coloring - custom palette > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring - custom palette > should create expected props for core chart 1`] = `
{
  "config": {
    "colorPalette": [
      {
        "fill": {
          "b": 73,
          "g": 49,
          "r": 195,
        },
        "guid": "01",
      },
      {
        "fill": {
          "b": 86,
          "g": 194,
          "r": 168,
        },
        "guid": "02",
      },
      {
        "fill": {
          "b": 177,
          "g": 217,
          "r": 243,
        },
        "guid": "03",
      },
      {
        "fill": {
          "b": 121,
          "g": 153,
          "r": 194,
        },
        "guid": "04",
      },
      {
        "fill": {
          "b": 34,
          "g": 37,
          "r": 162,
        },
        "guid": "05",
      },
    ],
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with coloring - custom palette preferred over colors > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring - custom palette preferred over colors > should create expected props for core chart 1`] = `
{
  "config": {
    "colorPalette": [
      {
        "fill": {
          "b": 73,
          "g": 49,
          "r": 195,
        },
        "guid": "01",
      },
      {
        "fill": {
          "b": 86,
          "g": 194,
          "r": 168,
        },
        "guid": "02",
      },
      {
        "fill": {
          "b": 177,
          "g": 217,
          "r": 243,
        },
        "guid": "03",
      },
      {
        "fill": {
          "b": 121,
          "g": 153,
          "r": 194,
        },
        "guid": "04",
      },
      {
        "fill": {
          "b": 34,
          "g": 37,
          "r": 162,
        },
        "guid": "05",
      },
    ],
    "colors": [
      "rgb(33, 41, 195)",
      "rgb(18, 194, 25)",
      "rgb(243, 56, 47)",
      "rgb(240, 239, 8)",
      "rgb(131, 131, 131)",
    ],
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with coloring - default > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring - default > should create expected props for core chart 1`] = `
{
  "config": {},
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with data labels - auto visibility > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - auto visibility > should create expected props for core chart 1`] = `
{
  "config": {
    "dataLabels": {
      "visible": "auto",
    },
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with data labels - default > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - default > should create expected props for core chart 1`] = `
{
  "config": {},
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with data labels - forced hidden > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - forced hidden > should create expected props for core chart 1`] = `
{
  "config": {
    "dataLabels": {
      "visible": false,
    },
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with data labels - forced visible > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - forced visible > should create expected props for core chart 1`] = `
{
  "config": {
    "dataLabels": {
      "visible": true,
    },
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with data labels - forced visible and german separators > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - forced visible and german separators > should create expected props for core chart 1`] = `
{
  "config": {
    "dataLabels": {
      "visible": true,
    },
    "separators": {
      "decimal": ",",
      "thousand": ".",
    },
  },
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute > should create expected props for core chart 1`] = `
{
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute with attr sorting > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a_label.product.id.name",
        "direction": "desc",
      },
    },
  ],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute with attr sorting > should create expected props for core chart 1`] = `
{
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute with nulls in data > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "closed.aag81lMifn6q",
          "type": "displayForm",
        },
        "localIdentifier": "a_closed.aag81lMifn6q",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "abZgFKGPaGYM",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_abZgFKGPaGYM",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "closed.aag81lMifn6q",
              "type": "displayForm",
            },
            "localIdentifier": "a_closed.aag81lMifn6q",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_closed.aag81lMifn6q",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "abZgFKGPaGYM",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_abZgFKGPaGYM",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute with nulls in data > should create expected props for core chart 1`] = `
{
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with x axis measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x axis measure > should create expected props for core chart 1`] = `
{
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with x axis measure and attribute > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x axis measure and attribute > should create expected props for core chart 1`] = `
{
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;

exports[`ScatterPlot > with y axis measure and attribute > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.product.id.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.product.id.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with y axis measure and attribute > should create expected props for core chart 1`] = `
{
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
}
`;
